# OGLE-for-GLIntercept

./: CommonErrorLog.h  OGLE.cpp  OGLE.dsp  OGLE.sln  OGLE.vcxproj  OGLEPlugin.cpp  OGLEPlugin.h  ObjFile.h  Readme.txt  ogle.h
config/: config.ini  gliConfig_OGLE.ini
docs/: README.html
docs/themes/eyeres_smarty/: style.css
mtl/: Makefile.am  abs.h  array2D.h  banded_indexer.h  bare_bones_array.h  blais.h  blas_interface.cc  blas_interface.h  block1D.h  block2D.h  compressed1D.h  compressed2D.h  compressed_iter.h  conj.h  cplx_dbldbl.h  dense1D.h  dense2D.h  dense_iterator.h  diagonal_indexer.h  dim_calc.h  dimension.h  dumptofile.h  entry.h  envelope2D.h  external_vector.h  fast.h  harwell_boeing_stream.h  initialize.h  iterator_adaptor.h  lapack_interface.h  light1D.h  light_matrix.h  linalg_vec.h  lu.h  matlabio.h  matrix.h  matrix_implementation.h  matrix_market_stream.h  matrix_traits.h  meta_if.h  (+25 more)
